--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,24 +1,35 @@
 /* Menu Styling */
 
-body {
+.body {
     padding: 0px;
     margin: 0px;
     font-family: 'Arial', 'Helvetica Neue', Helvetica, sans-serif; /*TODO: Move this font?? */
+
+    display: flex;
+    flex-direction: column;
 }
 
 .menu-wrapper {
     padding: 0px;
     margin: 0px;
     background-color: white;
+    flex:1;
 
+}
+
+.centered-content {
+
+    width: 960px;
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .menu-content-wrapper {
 
     background-color: white;
-    width: 960px;
+    /*width: 960px;
     margin-left: auto;
-    margin-right: auto;
+    margin-right: auto;*/
     
 
     display: flex;
@@ -50,6 +61,23 @@ body {
 
 .content-wrapper {
     background-color: grey;
+}
+
+
+/* Body Content */
+
+.content-wrapper {
+    flex: 1;
+
+    background-image: url(../images/topography.png);
+
+}
+
+
+/* Footer */ 
+
+.footer-wrapper {
+    flex: 1;
 }
 
 /* Font Styling */
