--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,3 @@
-/* Menu Styling */
-
-/* TODO: Change it to use align-tems, justify-content, and box-shadow 
-TODO: Need to go over positioning vs. flex*/
 .body {
     padding: 0px;
     margin: 0px;
@@ -9,7 +5,12 @@ TODO: Need to go over positioning vs. flex*/
 
     display: flex;
     flex-direction: column;
+
 }
+
+
+/* Menu Styling */
+
 
 .menu-wrapper {
     padding: 0px;
@@ -21,33 +22,23 @@ TODO: Need to go over positioning vs. flex*/
 }
 
 .centered-content {
-
-    width: 960px;
+    max-width: 960px;
     margin-left: auto;
     margin-right: auto;
 }
 
 .menu-content-wrapper {
-
     background-color: white;
-    /*width: 960px;
-    margin-left: auto;
-    margin-right: auto;*/
-    
-
     display: flex;
 }
 
 .portfolio-name-wrapper {
     background: #4aaaa5;
-
     flex: 1;
-
 }
 
 .menu-blank-container{
     flex: 2;
-
 }
 
 .menu-items-wrapper {
@@ -61,7 +52,6 @@ TODO: Need to go over positioning vs. flex*/
 .menu-item {
     flex: 1;
     text-align: center;
-    /* TODO: Remove ugly link styling off menu links */
 }
 
 .menu-item + .menu-item  {
@@ -81,15 +71,11 @@ a:hover {
 
 }
 
-/*NOTES: Aspect ratio: get a hero image to resize automatically, then you do height/width to get the % and then use that as your padding-bottom*/
-/*NOTES: Look up transform: translate (-50%, -50%)*/
-
 /* Body Content */
 
 .content-wrapper {
     flex: 1;
     background-image: url(../images/topography.png);
-
 }
 
 .content-container {
@@ -97,7 +83,6 @@ a:hover {
     border: 1px solid #dddddd;
     margin-top: 35px;
     margin-bottom: 35px;
-    /*padding: 10px 35px 10px 35px; TODO: Figure out spacing on this page*/ 
 }
 
 .content-padding {
@@ -111,7 +96,6 @@ a:hover {
 
 
 /* Contact Page */
-
 .field-name{
     color: #777777;
     padding: 5px 0px;
@@ -130,7 +114,6 @@ a:hover {
     background-color: #4aaaa5;
     border: none;
     color: white;
-
 }
 
 /* About Page */
@@ -154,8 +137,6 @@ a:hover {
 .portfolio-items-container {
     display: flex;
     flex-wrap: wrap;
-
-    /* TODO: Add max-width: 960 so that things wrap */
 }
 
 .portfolio-item-wrapper {
@@ -179,7 +160,6 @@ a:hover {
     text-align: center;
     font-family: 'Georgia', Times, Times New Roman, serif;
     color: white;
-    
 }
 
 
@@ -188,13 +168,10 @@ a:hover {
 }
 
 
-
-
 /* Footer */ 
 
 .footer-wrapper {
     flex: 1;
-
     height: 70px;
     display: flex;
     flex-direction: column;
@@ -210,7 +187,6 @@ a:hover {
     flex: 4;
 
     display: flex;
-    
 }
 
 .footer-content {
@@ -224,8 +200,7 @@ a:hover {
     top: 50%;
     width: 100%;
     text-align: center;
-
-
+    font-size: 12px;
 }
 
 /* Font Styling */
